<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#000000">


    <TextView
        android:id="@+id/usernamegetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="93dp"
        android:layout_height="53dp"
        android:layout_margin="16dp"
        android:background="#000000"
        android:contentDescription="@string/settings_button_description"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="ContentDescription,HardcodedText" />


    <Button
        android:id="@+id/btnReportLost"
        android:layout_width="313dp"
        android:layout_height="179dp"
        android:background="@drawable/edittextstuff"
        android:fontFamily="@font/montserrat"
        android:padding="20dp"
        android:text="@string/report_item_found_button"
        android:textColor="#FFFFFF"
        android:textColorHint="#808080"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <Button
        android:id="@+id/btnLookForItem"
        android:layout_width="313dp"
        android:layout_height="179dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/edittextstuff"
        android:fontFamily="@font/montserrat"
        android:padding="20dp"
        android:text="@string/look_for_item_lost_button"
        android:textColor="#FFFFFF"
        android:textColorHint="#808080"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextstuff"
        android:fontFamily="@font/montserrat"
        android:text="@string/go_back"
        android:textColor="#FFFFFF"
        android:textColorHint="#808080"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnInbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextstuff"
        android:fontFamily="@font/montserrat"
        android:text="@string/inbox_title"
        android:textColor="#FFFFFF"
        android:textColorHint="#808080"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881"
        tools:ignore="MissingConstraints" />

    <!-- Add these TextViews for statistics -->
    <TextView
        android:id="@+id/tvStatsReported"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items_reported_placeholder"
        android:fontFamily="@font/montserrat"
        android:textColor="#FFFFFF"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvStatsChats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_chats_placeholder"
        android:fontFamily="@font/montserrat"
        android:textColor="#FFFFFF"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvStatsResolved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items_resolved_placeholder"
        android:fontFamily="@font/montserrat"
        android:textColor="#FFFFFF"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_button"
        android:background="@drawable/edittextstuff"
        android:fontFamily="@font/montserrat"
        android:textColor="#FFFFFF"/>
</androidx.constraintlayout.widget.ConstraintLayout>
